# deepagents-practice

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
backend/: .gitignore  README.md  langgraph.json  pyproject.toml  test_tools.py  verify_agent.py
backend/my_agent/: agent.py  tools.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/components/: ConfigDialog.tsx
frontend/src/app/hooks/: useChat.ts
frontend/src/lib/: config.ts
