[project]
name = "my-test-agnet"
version = "0.1.0"
description = ""
authors = [
    {name = "haoy-wang",email = "whaoyue@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "deepagents (>=0.3.0,<0.4.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langchain-core (>=1.2.5,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"